service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service  # имя сервиса
spec:
  ports:
  - protocol: TCP
    port: 80       # порт, на котором сервис будет принимать трафик
    targetPort: 8000  # порт, на который сервис будет перенаправлять трафик
  selector:
    app: my-app     # значение метки, по которой селектор будет производить выборку
  type: LoadBalancer   # тип сервиса
